// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabList custom ListStyle style 1`] = `
.c0 {
  background-color: white;
  text-align: left;
  position: relative;
  white-space: nowrap;
  overflow: hidden;
  width: auto;
  padding: 0 0px 0 0px;
}

.c1 {
  overflow: hidden;
}

.c2 {
  padding-left: 0;
  position: relative;
  margin: 0;
  list-style: none;
  display: inline-block;
  -webkit-transition: -webkit-transform .3s cubic-bezier(.42,0,.58,1);
  -webkit-transition: transform .3s cubic-bezier(.42,0,.58,1);
  transition: transform .3s cubic-bezier(.42,0,.58,1);
}

.c3 {
  display: inline-block;
  padding: 10px 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  cursor: pointer;
  color: black;
}

<TabList
  customStyle={
    Object {
      "CustomTabList": [Function],
    }
  }
>
  <div>
    <styled.div
      hasExtraButton={false}
    >
      <div
        className="c0"
      >
        <styled.div
          innerRef={[Function]}
        >
          <div
            className="c1"
          >
            <styled.ul
              innerRef={[Function]}
            >
              <ul
                className="c2"
              >
                <Tab
                  active={false}
                  index={0}
                  key="0/.0"
                  tabIndex={0}
                >
                  <styled.li
                    active={false}
                    innerRef={[Function]}
                    onClick={[Function]}
                  >
                    <li
                      className="c3"
                      onClick={[Function]}
                    >
                      Tab1
                    </li>
                  </styled.li>
                </Tab>
              </ul>
            </styled.ul>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </div>
</TabList>
`;

exports[`TabList render Tab List 1`] = `
.c0 {
  background-color: white;
  text-align: left;
  position: relative;
  white-space: nowrap;
  overflow: hidden;
  width: auto;
  padding: 0 0px 0 0px;
}

.c1 {
  overflow: hidden;
}

.c2 {
  padding-left: 0;
  position: relative;
  margin: 0;
  list-style: none;
  display: inline-block;
  -webkit-transition: -webkit-transform .3s cubic-bezier(.42,0,.58,1);
  -webkit-transition: transform .3s cubic-bezier(.42,0,.58,1);
  transition: transform .3s cubic-bezier(.42,0,.58,1);
}

.c3 {
  display: inline-block;
  padding: 10px 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  cursor: pointer;
  color: black;
}

<TabList
  customStyle={Object {}}
>
  <div>
    <styled.div
      hasExtraButton={false}
    >
      <div
        className="c0"
      >
        <styled.div
          innerRef={[Function]}
        >
          <div
            className="c1"
          >
            <styled.ul
              innerRef={[Function]}
            >
              <ul
                className="c2"
              >
                <Tab
                  active={false}
                  index={0}
                  key="0/.0"
                  tabIndex={0}
                >
                  <styled.li
                    active={false}
                    innerRef={[Function]}
                    onClick={[Function]}
                  >
                    <li
                      className="c3"
                      onClick={[Function]}
                    >
                      Tab1
                    </li>
                  </styled.li>
                </Tab>
              </ul>
            </styled.ul>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </div>
</TabList>
`;
